--- a/foodfy.html
+++ b/foodfy.html
@@ -8,12 +8,18 @@
 
 <body>
     <header>
-        <div class="links">
-            <img src="assets/logo.png">
-            <a href="about.html">Sobre</a>
-            <a href="recipes.html">Receitas</a>
+        <div class="menu">
+            <a href="foodfy.html"><img src="assets/logo.png"></a>
+
+            <div class="links">
+                <a href="recipes.html">Receitas</a>
+            </div>
         </div>
     </header>
+
+    <div class="wrapper">
+        <h1>Todos os direitos reservados, receitas Foodfy</h1>
+    </div>
 
     <footer>
         <span>Todos os direitos reservados, receitas Foodfy</span>
