--- a/foodfy.html
+++ b/foodfy.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="links">
-            <img src="assets/logo.png">
+            <a href="foodfy.html"><img src="assets/logo.png"></a>
             <a href="about.html">Sobre</a>
             <a href="recipes.html">Receitas</a>
         </div>
