--- a/foodfy.html
+++ b/foodfy.html
@@ -8,30 +8,22 @@
 
 <body>
     <header>
-<<<<<<< HEAD
         <div class="links">
             <a href="foodfy.html"><img src="assets/logo.png"></a>
             <a href="about.html">Sobre</a>
             <a href="recipes.html">Receitas</a>
-=======
-        <div class="menu">
-            <a href="foodfy.html"><img src="assets/logo.png"></a>
-
-            <div class="links">
-                <a href="recipes.html">Receitas</a>
-            </div>
->>>>>>> 7b2ae5d7db5c09be1da55e5675988f3bb78afaad
         </div>
     </header>
 
-    <div class="wrapper">
-        <h1>Todos os direitos reservados, receitas Foodfy</h1>
-    </div>
 
-    <footer>
-        <span>Todos os direitos reservados, receitas Foodfy</span>
-    </footer>
+    <section class="intro">
+        <div class="intro__text">
+            <h1>As melhores receitas</h1>
+            <p>Aprenda a construir os melhores pratos com receitas criadas por profissionais do mundo inteiro</p>
+        </div>
 
+        <img src="assets/chef.png">
+    </section>
 </body>
 
 </html>
