--- a/foodfy.html
+++ b/foodfy.html
@@ -24,6 +24,10 @@
 
         <img src="assets/chef.png">
     </section>
+
+    <div class="wrapper">
+        <h1>Mais acessadas</h1>
+    </div>
 </body>
 
 </html>
