--- a/foodfy.html
+++ b/foodfy.html
@@ -28,6 +28,93 @@
     <div class="wrapper">
         <h1>Mais acessadas</h1>
     </div>
+
+    <section class="cards">
+        <div class="card">
+            <div class="card__image-container">
+                <img src="assets/burger.png">
+            </div>
+
+            <div class="card__content">
+                <p>Triplo bacon burger</p>
+            </div>
+
+            <div class="card__info">
+                <p class="card__info-author">por Jorge Relato</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card__image-container">
+                <img src="assets/pizza.png">
+            </div>
+
+            <div class="card__content">
+                <p>Pizza 4 estações</p>
+            </div>
+
+            <div class="card__info">
+                <p class="card__info-author">por Fabiana Melo</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card__image-container">
+                <img src="assets/espaguete.png">
+            </div>
+
+            <div class="card__content">
+                <p>Espaguete ao alho</p>
+            </div>
+
+            <div class="card__info">
+                <p class="card__info-author">por Júlia Kinoto</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card__image-container">
+                <img src="assets/lasanha.png">
+            </div>
+
+            <div class="card__content">
+                <p>Lasanha mac n' cheese</p>
+            </div>
+
+            <div class="card__info">
+                <p class="card__info-author">por Juliano Vieira</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card__image-container">
+                <img src="assets/doce.png">
+            </div>
+
+            <div class="card__content">
+                <p>Docinhos pão-do-céu</p>
+            </div>
+
+            <div class="card__info">
+                <p class="card__info-author">por Ricardo Golvea</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card__image-container">
+                <img src="assets/asinhas.png">
+            </div>
+
+            <div class="card__content">
+                <p>Asinhas de frango ao barbecue</p>
+            </div>
+
+            <div class="card__info">
+                <p class="card__info-author">por Vania Steroski</p>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
