--- a/foodfy.html
+++ b/foodfy.html
@@ -115,6 +115,10 @@
         </div>
     </section>
 
+    <footer>
+        <p>Todos direitos reservados, receitas Foodfy.</p>
+    </footer>
+
 </body>
 
 </html>
